--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
 title: Funkyyue's Blogs
-description: Bookmark this to keep an eye on my project updates!
+description: Blogs about digital VLSI architecture design, digital VLSI physical design, Systemverilog/Verilog language, Matlab, Cadence tools, Synopsys tools, and much more! Add to your watchlist to get updates!
